test img stretching mobile fix

--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@ a:hover {
 
 img, video {
     width: 100%;
-    height: intrinsic;
+    height: auto;
 }
 
 /* main div for all content */
